cmake_minimum_required(VERSION 3.15)
project(StephenPrataExercises)

set(CMAKE_CXX_STANDARD 17)

add_executable(StephenPrataExercises main.cpp)
add_executable(chapter_4 chapter_4.cpp)
add_executable(chapter_5 chapter_5.cpp)
add_executable(chapter_6 chapter_6.cpp)
add_executable(chapter_7 chapter_7.cpp)
add_executable(chapter_8 chapter_8.cpp)
add_executable(chapter_9 chapter_9.cpp)