cmake_minimum_required(VERSION 3.15)
project(StephenPrataExercises)

set(CMAKE_CXX_STANDARD 17)

add_executable(StephenPrataExercises main.cpp)
add_executable(chapter_4 chapter_4.cpp)
add_executable(chapter_5 chapter_5.cpp)
add_executable(chapter_6 chapter_6.cpp)
add_executable(chapter_7 chapter_7.cpp)
add_executable(chapter_8 chapter_8.cpp)
add_executable(chapter_9 chapter_9.cpp ch_9_files/chapter_9_namespaces.h
        ch_9_files/chapter_9_namespaces.cpp golf.h golf.cpp sales.h sales.cpp)
add_executable(bitwise_operations.cpp bitwise_operations.cpp)
add_executable(chapter_10 chapter_10.cpp ch_10_files/ch_10_bankbill.h ch_10_files/ch_10_bankbill.cpp ch_10_files/ch_10_person.h ch_10_files/ch_10_person.cpp ch_10_files/ch_10_sales.h ch_10_files/ch_10_sales.cpp ch_10_files/ch_10_list.h ch_10_files/ch_10_list.cpp)
add_executable(chapter_11 chapter_11.cpp ch_11_files/vect.h ch_11_files/vect.cpp ch_11_files/stonewt.h ch_11_files/stonewt.cpp time0.h time0.cpp ch_11_files/complex0.h ch_11_files/complex0.cpp)
add_executable(ch_11_rand_walk ch_11_files/ch_11_randwalk.cpp ch_11_files/vect.h ch_11_files/vect.cpp)
add_executable(chapter_12 chapter_12.cpp ch_12_files/ch_12_customer.h ch_12_files/ch_12_customer.cpp ch_12_files/ch_12_queue.h ch_12_files/ch_12_queue.cpp ch_12_files/ch_12_strbad.h ch_12_files/ch_12_strbad.cpp ch_12_files/ch_12_vegnews.cpp ch_12_files/ch_12_string1.h ch_12_files/ch_12_string1.cpp ch_12_files/ch_12_cow.h ch_12_files/ch_12_cow.cpp ch_12_files/ch_12_string2.h ch_12_files/ch_12_string2.cpp)
add_executable(ch_12_vegnews ch_12_files/ch_12_vegnews.cpp ch_12_files/ch_12_strbad.h ch_12_files/ch_12_strbad.cpp  ch_12_files/ch_12_queue.h ch_12_files/ch_12_queue.cpp)
add_executable(ch_12_string1_test ch_12_files/ch_12_string1_test.cpp ch_12_files/ch_12_string1.h ch_12_files/ch_12_string1.cpp)
add_executable(ch_12_queue_test ch_12_files/ch_12_queue_test.cpp ch_12_files/ch_12_queue.h ch_12_files/ch_12_queue.cpp ch_12_files/ch_12_customer.h ch_12_files/ch_12_customer.cpp)
add_executable(chapter_13 chapter_13.cpp ch_13_files/classic.h ch_13_files/classic.cpp ch_13_files/dma.h ch_13_files/dma.cpp)
add_executable(usett0 ch_13_files/usett0.cpp ch_13_files/tabtenn0.h ch_13_files/tabtenn0.cpp)
#add_executable(usebrass1 ch_13_files/usebrass1.cpp ch_13_files/brass.h ch_13_files/brass.cpp)
add_executable(usebrass1 ch_13_files/usebrass1.cpp ch_13_files/acctabc.h ch_13_files/acctabc.cpp)
#add_executable(usedma ch_13_files/usedma.cpp ch_13_files/dma.h ch_13_files/dma.cpp)